@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-11T00:39:32Z",
+  "timestamp" : "2022-06-11T16:08:21Z",
   "count_outdated" : 1591,
   "uniques_outdated" : 90,
-  "count" : 1644,
-  "uniques" : 101,
+  "count" : 1645,
+  "uniques" : 102,
   "views" : [
     {
       "timestamp": "2022-05-28T00:00:00Z",
@@ -65,6 +65,13 @@
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
